--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
         html, body {
             height: 100%;
             width: 100%;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            background: #400;
+            background: #000;
         }
         canvas {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            width: 100vw;
+            height: 100%;
+            width: 100%;
         }
     </style>
 </head>
